we do batching in MultiQueryAccess now.